kubernetes/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ai-engine

  template:
    metadata:
      labels:
        app: ai-engine

    spec:
      containers:
        - name: ai-engine

          image: sentinelai-ai-engine:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8001
