kubernetes/ai-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ai-service

spec:
  selector:
    app: ai-engine

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

  type: ClusterIP
