kubernetes/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress

spec:
  rules:
    - host: sentinelai.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 80
